--- a/css/menu.css
+++ b/css/menu.css
@@ -66,12 +66,22 @@ ul.mostrar{
     top: 108px;
 }
 
+.tittle-carrusel{
+    display: inline-flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-size: 8rem;
+    font-weight: 800;
+    color: #FFF;
+    margin-bottom: 20%;
+}
 /* mediaquery menu responsive */
 
 @media screen and (max-width:952px) {
     .items-menu li a {
         font-size: 16px;
     }
+    
 }
 
     /* Pantallas más pequeñas */
@@ -92,6 +102,7 @@ ul.mostrar{
         text-align: center;
         transition: all .4s;
         flex-direction: column; /* Mostrar los elementos unos sobre el otro */
+        z-index: 100;
     }
     .items-menu li {
         margin: 30px 0 0 0;
@@ -108,6 +119,12 @@ ul.mostrar{
     .items-menu li a:hover{
          color:#001971;
     }
+    .tittle-carrusel{
+        font-size: 3em;
+        font-weight:500;
+        margin-bottom: 7em;
+    }
+   
 }
 
 /* Para cuando se gire la pantalla | Orientación: horizontal */
@@ -120,5 +137,27 @@ ul.mostrar{
         overflow: scroll;
         height: calc(100% - 65px);
     }
+}
+.carousel-item{
+    height: 100vh;
+    width: 100vh;
+    margin-right: 0;   
+}
+#btnLeermas{
+    width: 55%;
+    height: 5%;
+    background: blue;
+    color:#fff;
+    border-radius: 20px;
+    margin-top: 10%;
+    margin-left: 18%;
+}
+#imgNosotros{
+    width: 80%;
+    height: 85%;
+    margin: 10%;
+    object-fit: cover;
+    border-radius: 30px;
+    box-shadow: 40px 40px 40px 0px #00000040;
 }
 
