--- a/css/menu.css
+++ b/css/menu.css
@@ -3,7 +3,13 @@
     padding: 0;
     outline: 0;
     box-sizing: border-box;}
-
+html,body{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
 nav {
     font-family: 'Open Sans',Arial, Helvetica, sans-serif;
     font-weight: bold;
