1. Correción y se añade de rutas entre páginas index-servicios-productos-registrarse.  2. Se redujo el alto del menú, disminuyendo el tamaño de el logo.  3. Solución al mensaje de error: Llena corectamente el formulario... del registro, ya se adapta a dispositivos móviles.  4. La imagen de fondo del registro se mejoró, ya se evita que se mueva al subir y bajar el scroll, quedo con una posición fija.  5. En registro, el mensaje de error por cada uno de los input se separó con un margin top para que no se vieran tan pegados.

--- a/web/css/formulario.css
+++ b/web/css/formulario.css
@@ -3,7 +3,9 @@ body {
 	/* background: #505050; */
 	background-image: url(../img/header_2.jpeg);
 	background-repeat: no-repeat; /* Evitar que se repita la imagen por todo el body */
+	background-position: center;
 	background-size: cover; /* Cambia el tamaño de la imagen de fondo para cubrir todo el contenedor body */
+	background-attachment: fixed; /* Dejar fija la imagen al momento de bajar o subir*/
 }
 
 main {
@@ -58,7 +60,8 @@ h1, h2{
 }
 
 .formulario__input-error {
-	font-size: 12px;
+	font-size: 15px;
+	margin-top: 8px;
 	margin-bottom: 0;
 	display: none;
 }
@@ -166,6 +169,10 @@ h1, h2{
 	.formulario__mensaje,
 	.formulario__grupo-btn-enviar {
 		grid-column: 1;
+	}
+
+	.formulario__mensaje{
+		height: 100%;
 	}
 
 	.formulario__btn {
