--- a/web/css/formulario.css
+++ b/web/css/formulario.css
@@ -1,7 +1,8 @@
 body {
-	font-family: 'Roboto', sans-serif;
+	/* font-family: 'Roboto', sans-serif; */
 	/* background: #505050; */
-	background-image: url(../img/header_2.jpeg);
+	background: linear-gradient(rgba(5, 7, 12, 0.5), rgba(5, 7, 12, 0.5)),
+    url(../img/header_2.jpeg);
 	background-repeat: no-repeat; /* Evitar que se repita la imagen por todo el body */
 	background-position: center;
 	background-size: cover; /* Cambia el tamaño de la imagen de fondo para cubrir todo el contenedor body */
@@ -14,9 +15,15 @@ main {
 	margin: auto;
 	padding: 40px;
 }
+h1{
+	color: #5372F0;
+	text-align: center;
+}
 
-h1, h2{
+h2{
+	color: #5372F0;
     text-align: center;
+	font-size: 30px;
 }
 
 .registro{
