Añadiend footer a todos los html y acomodando el index

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -45,6 +45,16 @@ footer p {
   margin:auto;
 }
 
+#imgNosotros{
+    height: 60%;
+    padding: auto;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    margin-top: 10%;
+    margin-bottom: 0;;
+}
+
 .redes {
   display: flex;
   justify-content: center;
