--- a/web/css/formulario.css
+++ b/web/css/formulario.css
@@ -1,12 +1,10 @@
+* {
+	box-sizing: border-box;
+}
+
 body {
-	/* font-family: 'Roboto', sans-serif; */
-	/* background: #505050; */
-	background: linear-gradient(rgba(5, 7, 12, 0.5), rgba(5, 7, 12, 0.5)),
-    url(../img/header_2.jpeg);
-	background-repeat: no-repeat; /* Evitar que se repita la imagen por todo el body */
-	background-position: center;
-	background-size: cover; /* Cambia el tamaño de la imagen de fondo para cubrir todo el contenedor body */
-	background-attachment: fixed; /* Dejar fija la imagen al momento de bajar o subir*/
+	font-family: 'Roboto', sans-serif;
+	background: #505050;
 }
 
 main {
@@ -15,15 +13,9 @@ main {
 	margin: auto;
 	padding: 40px;
 }
-h1{
-	color: #5372F0;
-	text-align: center;
-}
 
-h2{
-	color: #5372F0;
+h1, h2{
     text-align: center;
-	font-size: 30px;
 }
 
 .registro{
@@ -67,8 +59,7 @@ h2{
 }
 
 .formulario__input-error {
-	font-size: 15px;
-	margin-top: 8px;
+	font-size: 12px;
 	margin-bottom: 0;
 	display: none;
 }
@@ -176,10 +167,6 @@ h2{
 	.formulario__mensaje,
 	.formulario__grupo-btn-enviar {
 		grid-column: 1;
-	}
-
-	.formulario__mensaje{
-		height: 100%;
 	}
 
 	.formulario__btn {
