--- a/web/css/index.css
+++ b/web/css/index.css
@@ -13,69 +13,72 @@
     font-size: 80px;
 }
 
-@media only screen and (min-width:1920px) {
-    .tittle-carrusel{
-        font-size: 90px;
-    }
-} 
-
-@media only screen and (min-width:1600px) and (max-width: 1900px){
-    .tittle-carrusel{
-        font-size: 80px;
-    }
-} 
-
-@media only screen and (min-width:1366px){
-    .tittle-carrusel{
-        font-size: 80px;
-    }
-} 
-
-@media only screen and (min-width:1200px){
-    
-.tittle-carrusel{
-    font-size: 80px;
-}
-  
-}
-
-@media only screen and (min-width:960px) and (max-width: 1200px){
-    .tittle-carrusel{
-        font-size: 80px;
-    }
-
-}
-
-@media only screen and (min-width:768px) and (max-width:960px){
-    .tittle-carrusel{
-
-        font-size: 75px;
-    }
-}
-
-@media only screen and (min-width:720px) and (max-width:767px){
-    .tittle-carrusel{
-
-        font-size: 70px;
-    }
- 
-}
-
-@media only screen and (min-width:540px) and (max-width:720px){
-   
-.tittle-carrusel{
-
-    font-size: 60px;
-}
- 
-}
 @media only screen and (min-width:0px) and (max-width:540px){
     
-.tittle-carrusel{
-    font-size: 40px;
-}
-}
-
+    .tittle-carrusel{
+        font-size: 40px;
+    }
+    }
+    
+    @media only screen and (min-width:540px) and (max-width:720px){
+       
+        .tittle-carrusel{
+        
+            font-size: 60px;
+        }
+         
+        }
+    
+    @media only screen and (min-width:720px) and (max-width:767px){
+            .tittle-carrusel{
+        
+                font-size: 70px;
+            }
+         
+        }
+    
+    @media only screen and (min-width:768px) and (max-width:960px){
+            .tittle-carrusel{
+        
+                font-size: 75px;
+            }
+        }
+    
+    @media only screen and (min-width:960px) and (max-width: 1200px){
+            .tittle-carrusel{
+                font-size: 80px;
+            }
+        
+        }
+    
+    @media only screen and (min-width:1200px)and (max-width: 1300px){
+        
+            .tittle-carrusel{
+                font-size: 80px;
+            }
+              
+            }
+    
+    @media only screen and (min-width:1366px){
+                .tittle-carrusel{
+                    font-size: 64px;
+                }
+         } 
+    
+    
+    
+    @media only screen and (min-width:1600px) and (max-width: 1900px){
+        .tittle-carrusel{
+            font-size: 80px;
+        }
+    } 
+    
+    @media only screen and (min-width:1920px) {
+        .tittle-carrusel{
+            font-size: 90px;
+        }
+    } 
+    
 
 img{
   max-width: 100%; 
@@ -303,88 +306,412 @@ input[id="3"]:checked~ .pagination .pagination-item[for="3"]{
     } 
 }
 
-/* 
-.txt-carousel > h1{
-    font-size: 7vw;
-    margin-bottom: 55%;
-}
-.btnAgendar{
-    color:#FFF; 
-    background: transparent;
-    border: transparent;
-}
-.contBtn{
-    background:#0000ff; 
-    top: 35rem;
-    border-radius: 10px;
-    border-color: transparent;
-}
+/* Boton de Agendar Servicios en el slider del Index */
+
+.boton{
+    background:  #001971;
+    border-bottom: 5px solid #5168bb;
+    border-radius: 12px;
+    color: #fff;
+    cursor: pointer;
+    text-align: center;
+    transition: all 0.2s ease 0s;
+  }
+
+  .boton:hover{
+      background: #5168bb;
+  }
 
 
-@media only screen and (min-width:1200px){
-    .contBtn{
-        margin-left: 25%;
-        margin-right: 30%;
-        height: 6em;
-        width: 20em;
-        transform: translate(0,calc(100% - 5em));
-    }
-    .btnAgendar{
-        font-size: 2em;
-    }
-}
+ 
 
-@media only screen and (min-width:960px) and (max-width: 1200px){
-    .contBtn{
-        margin-left: 25%;
-        margin-right: 35%;
-        height: 5em;
-        width: 15em;
-        transform: translate(0,calc(100% - 20em));
-    }
-    .btnAgendar{
-        font-size: 1.7em;
-    }
-}
 
-@media only screen and (min-width:720px) and (max-width:960px){
+  /* Responsive del Boton Agendar Servicios */
+
+  @media only screen and (min-width:0px) and (max-width:540px){
+    #botonAgendar{
+         margin-left: 20px;
+         margin-top: 20px;
+         width: 150px;
+         height: 70px;
+         font-size: 17px;
+     }
     
-    .contBtn{
-        margin-left: 20%;
-        margin-right: 35%;
-        height: 4em;
-        width: 13em;
-        transform: translate(0,calc(100% - 20em));
+    
+   }
+    
+    @media only screen and (min-width:540px) and (max-width:720px){
+       
+        #botonAgendar{
+            margin-left: 50px;
+            margin-top: 20px;
+            width: 180px;
+            height: 70px;
+            font-size: 19px;
+        }
+         
+        }
+    
+    @media only screen and (min-width:720px) and (max-width:767px){
+        #botonAgendar{
+            margin-left: 85px;
+            margin-top: 20px;
+            width: 180px;
+            height: 70px;
+            font-size: 17px;
+        }
+       
+        }
+    
+    @media only screen and (min-width:768px) and (max-width:960px){
+        #botonAgendar{
+            margin-left: 85px;
+            margin-top: 20px;
+            width: 180px;
+            height: 70px;
+            font-size: 17px;
+        }
+
+     
+        }
+    
+    @media only screen and (min-width:960px) and (max-width: 1200px){
+        #botonAgendar{
+            margin-left: 130px;
+            margin-top: 20px;
+            width: 180px;
+            height: 70px;
+            font-size: 17px;
+        }
+        
+        }
+    
+    @media only screen and (min-width:1200px)and (max-width: 1365px){
+        #botonAgendar{
+            margin-left: 180px;
+            margin-top: 40px;
+             width: 220px;
+             height: 70px;
+             font-size: 22px;
+         }
+       
+            
+              
+            }
+    
+    @media only screen and (min-width:1366px) and (max-width: 1599px){
+        #botonAgendar{
+            margin-left: 220px;
+            margin-top: 40px;
+             width: 220px;
+             height: 70px;
+             font-size: 22px;
+         }
+         
+         } 
+    
+    
+    
+    @media only screen and (min-width:1600px) and (max-width: 1920px){
+        #botonAgendar{
+            margin-left: 260px;
+            margin-top: 40px;
+             width: 280px;
+             height: 70px;
+             font-size: 22px;
+         }
+         
+          
+    } 
+    
+
+    @media only screen and (min-width:1920px) {
+        #botonAgendar{
+            margin-left: 320px;
+            margin-top: 40px;
+             width: 320px;
+             height: 70px;
+             font-size: 22px;
+         }
+         
+        
+    } 
+    
+    
+
+
+
+
+
+
+/* Seccion sobre nosotros del index: dividido en dos columnas */
+
+#content { 
+    overflow:auto; 
+   
+   
+  } 
+  
+
+  #left{
+    width: 35%; 
+    margin-left: 50px;
+    padding: 1em; 
+  }
+
+  #right { 
+   width: 60%;
+    margin-right: 10px;
+    margin-top: 30px;
+    padding: 1em; 
+
+  } 
+  
+ /* Responsive de la seccion sobre Nosotros del Index */
+  @media only screen and (min-width:0px) and (max-width:540px){
+    
+    #left img{
+        height: 250px;
     }
-    .btnAgendar{
-        font-size: 1.4em;
+    
+  #left{
+    width: 75%;
+    margin-bottom: -30px;
+  }
+
+  #right { 
+    width: 70%;
+    padding: 1em;
+    margin-left: 60px; 
     }
 }
+    
+    @media only screen and (min-width:540px) and (max-width:720px){
+       
+        #left img{
+            width: 500px;
+            height: 250px;
+        }
+        
+      #left{
+        width: 75%;
+        margin-left: 80px;
+        margin-bottom: -30px; 
+      }
+    
+      #right { 
+        width: 70%;
+        padding: 1em;
+        margin-left: 90px; 
+        }
+         
+        }
+    
+    @media only screen and (min-width:720px) and (max-width:767px){
+        #left img{
+            width: 600px;
+            height: 250px;
+        }
+        
+      #left{
+        width: 75%;
+        margin-left: 90px;
+        margin-bottom: -30px; 
+      }
+    
+      #right { 
+        width: 70%;
+        padding: 1em;
+        margin-left: 100px; 
+        }
+        }
+    
+    @media only screen and (min-width:768px) and (max-width:960px){
+        #left img{
+            width: 600px;
+            height: 250px;
+        }
+        
+      #left{
+        width: 75%;
+        margin-left: 100px;
+        margin-bottom: -30px; 
+      }
+    
+      #right { 
+        width: 70%;
+        padding: 1em;
+        margin-left: 110px; 
+        }
+        }
+    
+    @media only screen and (min-width:960px) and (max-width: 1200px){
 
-@media only screen and (min-width:540px) and (max-width:720px){
-    .contBtn{
-        margin-left: 22%;
-        margin-right: 30%;
-        height: 3em;
-        width: 10em;
-        transform: translate(0,calc(100% - 23em));
-    }
-    .btnAgendar{
-        font-size: 1.2em;
-    }
-}
-@media only screen and (min-width:0px) and (max-width:540px){
-    .contBtn{
-        margin-left: 20%;
-        margin-right: 35%;
-        height: 4em;
-        width: 5em;
-        transform: translate(0,calc(100% - 30em));
-    }
-    .btnAgendar{
-        font-size: 0.9em;
-        margin:auto;
-    }
-} */
+        #left img{
+            width: 800px;
+            height: 320px;
+        }
+        
+        
+    #left{
+        width: 40%; 
+        padding: 1em; 
+        }
+
+    #right { 
+    width: 50%;
+        margin-right: 30px;
+        padding: 1em; 
+    } 
+    
+    #left  { float:left;  }
+    #right { float:right; } 
+            
+        
+        }
+    
+    @media only screen and (min-width:1200px)and (max-width: 1300px){
+        
+        #left img{
+            width: 800px;
+            height: 340px;
+        }
+        
+        
+    #left{
+        width: 40%; 
+        padding: 1em; 
+        }
+
+    #right { 
+    width: 50%;
+        margin-right: 30px;
+        padding: 1em; 
+    } 
+    
+    #left  { float:left;  }
+    #right { float:right; } 
+            
+              
+            }
+    
+    @media only screen and (min-width:1366px){
+
+        #left img{
+            height: 340px;
+        }
+
+        #left{
+            width: 35%; 
+            margin-left: 50px;
+            padding: 1em; 
+          }
+        
+          #right { 
+           width: 60%;
+            margin-right: 10px;
+            margin-top: 30px;
+            padding: 1em; 
+          } 
+          
+          #left  { float:left;  }
+          #right { float:right; }  
+         } 
+    
+    
+    
+    @media only screen and (min-width:1600px) and (max-width: 1900px){
+        #left img{
+         width: 100%;
+            height: 340px;
+        }
+
+        #left{
+            width: 35%; 
+            margin-left: 50px;
+            padding: 1em; 
+          }
+        
+          #right { 
+           width: 60%;
+            margin-right: 20px;
+            margin-top: 30px;
+            padding: 1em; 
+          } 
+          
+          #left  { float:left;  }
+          #right { float:right; }  
+          
+    } 
+    
+
+    @media only screen and (min-width:1920px) {
+          #left img{
+         width: 100%;
+            height: 340px;
+        }
+
+        #left{
+            width: 35%; 
+            margin-left: 50px;
+            padding: 1em; 
+          }
+        
+          #right { 
+           width: 60%;
+            margin-right: 30px;
+            margin-top: 30px;
+            padding: 1em; 
+         
+          } 
+          
+          #left  { float:left;  }
+          #right { float:right; }  
+    } 
+    
+    
+    .galeria img {
+        box-shadow: 0 8px 10px -4px rgba(0,0,0,.6);
+
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+        width: 100%;
+        height: 300px;
+        
+   } 
 
 
+   .galeria .col {
+        margin-bottom: 30px;
+   }
+   
+   .titulo{
+       text-align: center;
+       font-size: 25px;
+       font-weight: 700;
+       width: 100%;
+       background-color: #FFE600;
+       height: 55px;
+       border-bottom-left-radius: 15px;
+       border-bottom-right-radius: 15px;
+    
+   }
+
+  
+.boton2{
+    background:  #FFE600;
+    border-bottom: 5px solid #5168bb;
+    border-radius: 20px;
+    font-size: 20px;
+    font-weight: 900;
+    width: 200px;
+    height: 50px;
+    color: #fff;
+    cursor: pointer;
+    text-align: center;
+    transition: all 0.2s ease 0s;
+  }
+
+  .boton2:hover{
+      background: #5168bb;
+  }
