--- a/web/css/servicios.css
+++ b/web/css/servicios.css
@@ -144,7 +144,7 @@
          height:"100%";
     
     } 
-
+}
 
 
 
@@ -966,5 +966,3 @@ input[id="3"]:checked~ .pagination .pagination-item[for="3"]{
     border-radius: 50%;
     line-height: 25px;
 }
-
-
