--- a/web/css/productosAdmin.css
+++ b/web/css/productosAdmin.css
@@ -8,12 +8,12 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/css.css to edit this t
 */
 
 .tablaPro{
-    
+
     font-size: 14px;
 }
 
 td{
-    
+
     font-size: 15px;
 }
 
@@ -35,13 +35,13 @@ td{
     cursor: pointer;
     text-align: center;
     transition: all 0.2s ease 0s;
-  }
+}
 
-  .boton2:hover{
-      background: #f70000;
-  }
+.boton2:hover{
+    background: #f70000;
+}
 
-  .boton3{
+.boton3{
     background:  #001971;
     border-bottom: 5px solid #001971;
     border-radius: 10px;
@@ -53,8 +53,45 @@ td{
     cursor: pointer;
     text-align: center;
     transition: all 0.2s ease 0s;
+}
+
+.boton3:hover{
+    background: #0342ee;
+}
+
+.botonSI{
+      background:  #001971;
+       border-bottom: 5px solid #001971;
+        border-radius: 10px;
+        font-size: 17px;
+        font-weight: 900;
+        width: 120px;
+        height: 35px;
+        color: #fff;
+        cursor: pointer;
+     text-align: center;
+     transition: all 0.2s ease 0s;
+      
+  }
+  
+  .botonSI:hover{
+       background: #0342ee;
+  }
+  
+  .botonNO{
+    background:  #ff0800;
+    border-bottom: 5px solid #bb5851;
+    border-radius: 10px;
+    font-size: 17px;
+    font-weight: 900;
+    width: 120px;
+    height: 35px;
+    color: #fff;
+    cursor: pointer;
+    text-align: center;
+    transition: all 0.2s ease 0s;
   }
 
-  .boton3:hover{
-      background: #0342ee;
+  .botonNO:hover{
+      background: #f70000;
   }
