Vista de reportes

--- a/web/css/menuAdministrador.css
+++ b/web/css/menuAdministrador.css
@@ -297,3 +297,9 @@ td{
   margin-right: 50px !important;
 }
 
+.arreglo{
+  background-color: #10f035f6 !important;
+  margin-right: 27px;
+  float: right;
+  border: none;
+}
