--- a/web/css/cotizacion.css
+++ b/web/css/cotizacion.css
@@ -21,6 +21,7 @@ main{
     padding-bottom: 10px;
 }
 
+/*
 .contenedor{
     position: relative;
     display: flex;
@@ -28,6 +29,7 @@ main{
     flex-wrap: wrap;
     padding: 20px;
 }
+*/
 
 .contenedor .card{
     position: relative;
@@ -89,6 +91,7 @@ main{
 
 h3{
     text-align: center;
+    font-size: 25px !important;
 }
 
 .boton{
